silver/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4567
  selector:
    app: silver-api-deployment
