silver/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 6000
  selector:
    app: silver-auth-application
  type: ClusterIP
