silver/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: silver-ingress
spec:
  rules:
    - http:
        paths:
          - path: /auth
            backend:
              serviceName: auth-service
              servicePort: 80
          - path: /api
            backend:
              serviceName: api-service
              servicePort: 80
